--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,44 @@
-# Dependencies
-/node_modules
+# ============================================
+# BEON MAILER - GITIGNORE
+# ============================================
 
-# Environment variables
+# Dependencies
+node_modules/
+
+# Environment variables (PENTING: jangan commit kredensial!)
 .env
+.env.local
+.env.*.local
 
 # Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/logs
+
+# OS generated files
+.DS_Store
+.DS_Store?
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Editor/IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache
+.npm
+
+# Email lists dengan data sensitif (uncomment jika perlu)
+# lists/*.txt
